--- a/templates/stuffinfo.html
+++ b/templates/stuffinfo.html
@@ -4,59 +4,21 @@
    <table class="table table-bordered">
     <thead>
         <tr>
-            <th style="width: 7%">序号</th>
-            <th style="width:20%;">任务</th>
-            <th>进度</th>
-            <th>开发者</th>
-            <th>结束时间</th>
+            <th style="width:10%">编码</th>
+            <th style="width:20%;">姓名</th>
+            <th>所在部门</th>
+            <th>所在项目</th>
         </tr>
     </thead>
     <tbody>
-        <tr>
-            <td>1</td>
-            <td>版本更新</td>
-            <td>
-                刚开始
-            </td>
-            <td>管理员</td>
-            <td>2015-09-20</td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>数据备份</td>
-            <td>
-                已结束
-            </td>
-            <td>管理员</td>
-            <td>2015-09-20</td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>定时任务</td>
-            <td>
-                70%
-            </td>
-            <td>管理员</td>
-            <td>2015-09-20</td>
-        </tr>
-        <tr>
-            <td>4</td>
-            <td>修复bug</td>
-            <td>
-                完成
-            </td>
-            <td>管理员</td>
-            <td>2015-09-20</td>
-        </tr>
-        <tr>
-            <td>5</td>
-            <td>系统告警</td>
-            <td>
-                已结束
-            </td>
-            <td>管理员</td>
-            <td>2015-09-20</td>
-        </tr>
+       {% for i in stuffinfos %}
+            <tr>
+                <td>{{ i.scode }}</td>
+                <td>{{ i.sname }}</td>
+                <td>{{ i.deptname }}</td>
+                <td>{{ i.projname }}</td>
+            </tr>
+       {% endfor %}
     </tbody>
 </table>
 {% endblock %}
