增加部门设置的前端页面

--- a/templates/dept_setting.html
+++ b/templates/dept_setting.html
@@ -14,7 +14,7 @@
             <td>{{ i.deptcode }}</td>
             <td>{{ i.deptname }}</td>
             <td>
-                <button class="btn btn-xs btn-success" title="激活">
+                <button class="btn btn-xs btn-success" title="修改">
                     <i class="glyphicon glyphicon-ok"></i>
                 </button>
                 <button class="btn btn-xs btn-warning" title="编辑">
