--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-This is a index Page!!!
-</body>
-</html>
+{% extends 'BASE01.html' %}
+
+{% block content %}
+   This is a index Page!!!!
+{% endblock %}
