增加所有数据字段

--- a/templates/base01.html
+++ b/templates/base01.html
@@ -43,7 +43,7 @@
                                 <img src="https://magicbox.bk.tencent.com/static_api/v3/bk/images/logo.png" class="logo"> </a>
                         </div>
                         <ul class="nav navbar-nav pull-left m0">
-                            <li class="active"><a href="javascript:void(0);">首页</a></li>
+                            <li class="active"><a href="/index">首页</a></li>
                         </ul>
                         <div class="navbar-header pull-right">
                             <ul class="nav">
@@ -67,37 +67,37 @@
                         <div class="navbar-collapse navbar-hov">
                             <ul class="nav navbar-nav side-nav">
                                 <li class="active">
-                                    <a href="javascript:void(0);"> <i class="fa fa-dashboard ">                            </i>
+                                    <a href="/index"> <i class="fa fa-dashboard ">                            </i>
                                         <span>首页-all</span> <i class="fa fa-fw "></i> </a>
                                     <ul id="demo" class="collapse"> </ul>
                                 </li>
                                 <li>
-                                    <a href="javascript:void(0);"> <i class="fa fa-wrench ">                            </i>
+                                    <a href="/n1"> <i class="fa fa-wrench ">                            </i>
                                         <span>N1</span> <i class="fa fa-fw "></i> </a>
                                     <ul id="demo" class="collapse"> </ul>
                                 </li>
                                 <li>
-                                    <a href="javascript:void(0);"> <i class="fa fa-edit ">                            </i>
+                                    <a href="/z1"> <i class="fa fa-edit ">                            </i>
                                         <span>Z1</span> <i class="fa fa-fw "></i> </a>
                                     <ul id="demo" class="collapse"> </ul>
                                 </li>
                                 <li>
-                                    <a href="javascript:void(0);"> <i class="fa fa-ellipsis-h ">                            </i>
+                                    <a href="/plat"> <i class="fa fa-ellipsis-h ">                            </i>
                                         <span>平台</span> <i class="fa fa-fw "></i> </a>
                                     <ul id="demo" class="collapse"> </ul>
                                 </li>
                                 <li>
-                                    <a href="javascript:void(0);"> <i class="fa fa-wrench ">                            </i>
+                                    <a href="/game1"> <i class="fa fa-wrench ">                            </i>
                                         <span>游戏一组</span> <i class="fa fa-fw "></i> </a>
                                     <ul id="demo" class="collapse"> </ul>
                                 </li>
                                 <li>
-                                    <a href="javascript:void(0);"> <i class="fa fa-arrows-v ">                            </i>
+                                    <a href="/game2"> <i class="fa fa-arrows-v ">                            </i>
                                         <span>游戏二组</span> <i class="fa fa-fw "></i> </a>
                                     <ul id="demo" class="collapse"> </ul>
                                 </li>
                                 <li>
-                                    <a href="javascript:void(0);"> <i class="fa fa-arrows-v ">                            </i>
+                                    <a href="/art"> <i class="fa fa-arrows-v ">                            </i>
                                         <span>美术组</span> <i class="fa fa-fw "></i> </a>
                                     <ul id="demo" class="collapse"> </ul>
                                 </li>
