--- a/templates/base01.html
+++ b/templates/base01.html
@@ -36,7 +36,7 @@
     <div class="king-page-box">
         <div class="king-layout1-header">
             <nav class="">
-                <div style="overflow:hidden; z-index: inherit;" class="navbar king-horizontal-nav1  f14">
+                <div style="overflow:hidden; position: fixed;top: 0; left: 0;z-index:999;width: 100%;height: 45px;" class="navbar king-horizontal-nav1  f14">
                     <div class="navbar-container">
                         <div class="navbar-header pull-left">
                             <a class="navbar-brand" href="javascript:;">
@@ -59,44 +59,44 @@
                 </div>
             </nav>
         </div>
-        <div class="king-layout1-main clearfix">
+        <div class="king-layout1-main clearfix" style="position: fixed;top: 45px;left: 0;z-index: 999;width: 100%;height: 50px">
             <!-- sidebar start -->
             <div class="king-layout1-sidebar" style="width:216px;">
                 <nav style="overflow:hidden;">
-                    <div class="king-vertical-nav9    f14">
+                    <div class="king-vertical-nav9  f14 king-full-height">
                         <div class="navbar-collapse navbar-hov">
                             <ul class="nav navbar-nav side-nav">
-                                <li class="active">
+                                <li {% if request.path == "/index/" %} class="active" {% endif %}>
                                     <a href="/index"> <i class="fa fa-dashboard ">                            </i>
                                         <span>首页-all</span> <i class="fa fa-fw "></i> </a>
                                     <ul id="demo" class="collapse"> </ul>
                                 </li>
-                                <li>
+                                <li {% if request.path == "/n1/" %} class="active" {% endif %}>
                                     <a href="/n1"> <i class="fa fa-wrench ">                            </i>
                                         <span>N1</span> <i class="fa fa-fw "></i> </a>
                                     <ul id="demo" class="collapse"> </ul>
                                 </li>
-                                <li>
+                                <li {% if request.path == "/z1/" %} class="active" {% endif %}>
                                     <a href="/z1"> <i class="fa fa-edit ">                            </i>
                                         <span>Z1</span> <i class="fa fa-fw "></i> </a>
                                     <ul id="demo" class="collapse"> </ul>
                                 </li>
-                                <li>
+                                <li {% if request.path == "/plat/" %} class="active" {% endif %}>
                                     <a href="/plat"> <i class="fa fa-ellipsis-h ">                            </i>
                                         <span>平台</span> <i class="fa fa-fw "></i> </a>
                                     <ul id="demo" class="collapse"> </ul>
                                 </li>
-                                <li>
+                                <li {% if request.path == "/game1/" %} class="active" {% endif %}>
                                     <a href="/game1"> <i class="fa fa-wrench ">                            </i>
                                         <span>游戏一组</span> <i class="fa fa-fw "></i> </a>
                                     <ul id="demo" class="collapse"> </ul>
                                 </li>
-                                <li>
+                                <li {% if request.path == "/game2/" %} class="active" {% endif %}>
                                     <a href="/game2"> <i class="fa fa-arrows-v ">                            </i>
                                         <span>游戏二组</span> <i class="fa fa-fw "></i> </a>
                                     <ul id="demo" class="collapse"> </ul>
                                 </li>
-                                <li>
+                                <li {% if request.path == "/art/" %} class="active" {% endif %}>
                                     <a href="/art"> <i class="fa fa-arrows-v ">                            </i>
                                         <span>美术组</span> <i class="fa fa-fw "></i> </a>
                                     <ul id="demo" class="collapse"> </ul>
