--- a/templates/base01.html
+++ b/templates/base01.html
@@ -40,7 +40,7 @@
                     <div class="navbar-container">
                         <div class="navbar-header pull-left">
                             <a class="navbar-brand" href="javascript:;">
-                                <img src="https://magicbox.bk.tencent.com/static_api/v3/bk/images/logo.png" class="logo"> </a>
+                                <img src="/static/images/logo.png" class="logo"> </a>
                         </div>
                         <ul class="nav navbar-nav pull-left m0">
                             <li class="active"><a href="/index">首页</a></li>
