--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,8 @@
                 <td>{{ i.notes }}</td>
             </tr>
         {% endfor %}
+        <td><b>员工总数：</b></td>
+        <td><b>{{ stuffs_count }}人</b></td>
     </tbody>
 </table>
 {% endblock %}
