--- a/templates/index_bak.html
+++ b/templates/index_bak.html
@@ -17,7 +17,7 @@
         </tr>
     </thead>
     <tbody>
-        {% for i in stuffs_all %}
+        {% for i in stuff_sum %}
             <tr>
                 <td>{{ i.deptname }}</td>
                 <td>{{ i.scode }}</td>
